--- a/detail/index.html
+++ b/detail/index.html
@@ -29,7 +29,13 @@
 
     <main>
         <div id="post-it-detail">
-            
+            <button id="delete-post">Delete post</button>
+            <h2 id="detail-title">Post title</h2>
+            <p id="detail-descript">Post description</p>
+            <p id="detail-contact">contact info</p>
+            <input type="text" id="comment">
+            <button id="add-comment">Post comment</button>
+            <p id="detail-error"></p>
         </div>
 
     </main>
