add function to dynamically render DOM elements

--- a/detail/index.html
+++ b/detail/index.html
@@ -30,6 +30,7 @@
     <main>
         <div id="post-it-detail">
             <button id="delete-post">Delete post</button>
+            <p id="category"></p>
             <h2 id="detail-title">Post title</h2>
             <p id="detail-descript">Post description</p>
             <p id="detail-contact">contact info</p>
