--- a/detail/index.html
+++ b/detail/index.html
@@ -13,6 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600&family=Titillium+Web:wght@200;400;600&display=swap">
     <link rel="stylesheet" href="/styles/reset.css" />
     <link rel="stylesheet" href="/styles/global.css" />
+    <link rel="stylesheet" href="/detail/style.css">
     <link rel="stylesheet" href="/styles/bulletin-board.css" />
     <title>Community Bulletin Board</title>
 </head>
@@ -29,14 +30,7 @@
 
     <main>
         <div id="post-it-detail">
-            <button id="delete-post">Delete post</button>
-            <p id="category"></p>
-            <h2 id="detail-title">Post title</h2>
-            <p id="detail-descript">Post description</p>
-            <p id="detail-contact">contact info</p>
-            <input type="text" id="comment">
-            <button id="add-comment">Post comment</button>
-            <p id="detail-error"></p>
+            
         </div>
 
     </main>
