add render function to display all users

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <h1>Community BB</h1>
         <nav>
             <a href="create-post">Add Post</a>
+            <a href="./profile/index.html">Profile</a>
+            <a href="./profile-list/index.html">Users</a>
             <a id="sign-out-link" href="auth">Sign Out</a>
         </nav>
     </header>
