--- a/profile/index.html
+++ b/profile/index.html
@@ -14,27 +14,28 @@
     <link rel="stylesheet" href="/styles/reset.css" />
     <link rel="stylesheet" href="/styles/global.css" />
     <link rel="stylesheet" href="/profile/style.css" />
-    <title>Add Post</title>
+    <title>Update profile</title>
 </head>
 
 <body>
     <header>
         <img class="logo" src="/assets/cbb-logo.png">
-        <h1>Create a Post</h1>
+        <h1>Update your profile</h1>
         <nav>
             <a href="../">Bulletin</a>
-            <a id="sign-out-link" href="auth">Sign out</a>
+            <a href="../profile-list/index.html">Users</a>
+            <a id="sign-out-link" href="../auth">Sign out</a>
         </nav>
     </header>
 
     <main>
         <div id="form-container">
         <form id="profile-form">
-            <label for="profile-name">Name</label>
-            <input type="text" name="profile-name">
-            <label for="profile-bio">Bio</label>
-                <textarea name="profile-bio" id="" cols="30" rows="10"></textarea>
-                <button name="profile-btn">Update profile</button>
+            <label class="form-label" for="profile-name">Name</label>
+            <input class="form-input" type="text" name="profile-name">
+            <label class="form-label" for="profile-bio">Bio</label>
+                <textarea class="form-input" name="profile-bio" id="" cols="30" rows="10"></textarea>
+                <button class="form-button" name="profile-btn">Update profile</button>
             <p class="error"></p>
         </form>
         </div>
