--- a/profile-list/index.html
+++ b/profile-list/index.html
@@ -13,31 +13,41 @@
         href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600&family=Titillium+Web:wght@200;400;600&display=swap">
     <link rel="stylesheet" href="/styles/reset.css" />
     <link rel="stylesheet" href="/styles/global.css" />
-    <link rel="stylesheet" href="/detail/style.css">
-    <link rel="stylesheet" href="/styles/bulletin-board.css" />
-    <title>Community Bulletin Board</title>
+    <link rel="stylesheet" href="../profile/style.css" />
+    <title>User profiles</title>
 </head>
 
 <body>
     <header>
         <img class="logo" src="/assets/cbb-logo.png">
-        <h1>Community BB</h1>
+        <h1>User profiles</h1>
         <nav>
-            <a href="create-post">Add Post</a>
-            <a id="sign-out-link" href="../auth">Sign Out</a>
+            <a href="../">Bulletin</a>
+            <a href="../profile/index.html">Update profile</a>
+            <a id="sign-out-link" href="../auth">Sign out</a>
         </nav>
     </header>
 
     <main>
-        <div id="post-it-detail">
-            
+        <!-- <div id="profiles-list">
+            <div class="profile">
+                <h2 class="name">Name</h2>
+                <p class="bio">Bio</p>
+            </div>
+            <div class="profile">
+                <h2 class="name">Name</h2>
+                <p class="bio">Bio</p>
+            </div>
+            <div class="profile">
+                <h2 class="name">Name</h2>
+                <p class="bio">Bio</p>
+            </div> -->
         </div>
-
     </main>
 
     <footer>&copy;2022 Software Developer</footer>
 
-    <script type="module" src="../detail/post.js"></script>
+    <script type="module" src="../profile-list/profile-list.js"></script>
 </body>
 
 </html>
