--- a/profile-list/index.html
+++ b/profile-list/index.html
@@ -29,19 +29,8 @@
     </header>
 
     <main>
-        <!-- <div id="profiles-list">
-            <div class="profile">
-                <h2 class="name">Name</h2>
-                <p class="bio">Bio</p>
-            </div>
-            <div class="profile">
-                <h2 class="name">Name</h2>
-                <p class="bio">Bio</p>
-            </div>
-            <div class="profile">
-                <h2 class="name">Name</h2>
-                <p class="bio">Bio</p>
-            </div> -->
+        <div id="profiles-list">
+            
         </div>
     </main>
 
