--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
         <div id="dropdown">
             <select id="category-dropdown" class="dropdown">
-                <option id="" value="">All categories</option>
+                <option id="0" value="">All categories</option>
                 <option id="1" value="1">💰 For sale</option>
                 <option id="3" value="3">📅 Events</option>
                 <option id="4" value="4">🏠 Housing</option>
